--- a/skeleton/css/00-reset.css
+++ b/skeleton/css/00-reset.css
@@ -5,15 +5,29 @@ ul, li, strong, main, button, i,
 section, img, div, h2, p, form,
 fieldset, label, input, textarea,
 span, article, footer, time, small {
+  margin: 0px;
+  border: 0px;
+  padding: 0px;
 
+  font: inherit;
+  text-align: inherit;
+  text-decoration: inherit;
+  color: inherit;
+  box-sizing: inherit;
+
+  background: transparent;
 }
 
 ul {
-
+  list-style: none;
 }
 
-img {
 
+
+img {
+  width: 100%;
+  height: auto;
+  display: block;
 }
 
 input[type="password"],
@@ -22,16 +36,20 @@ input[type="text"],
 input[type="submit"],
 textarea,
 button {
-
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
 }
 
 button,
 input[type="submit"] {
-
+  cursor: pointer;
 }
 
 /* Clearfix */
 
 .group:after {
-
+  content: "";
+  display: block;
+  clear: both;
 }
