--- a/skeleton/css/01-header.css
+++ b/skeleton/css/01-header.css
@@ -1,1 +1,58 @@
 /* PHASE 1: Header */
+body {
+  font-family: "Roboto", sans-serif;;
+  font-weight: 400;
+  font-size: 18px;
+  color: white;
+}
+
+header, nav-header, logo-header, list-header {
+
+}
+
+.header {
+  display: block;
+  background: #f00;
+  position: static;
+  z-index: 1;
+}
+
+
+.header-nav {
+  width: 900px;
+  margin: 0px auto;
+  position: relative;
+}
+
+.header-logo:hover {
+    background-color: black;
+    cursor: pointer;
+}
+
+.header-logo {
+  display: inline-block;
+  border-left: 1px solid white;
+  border-right: 1px solid white;
+  padding: 10px 20px 10px 20px;
+  position: relative;
+}
+
+.header-list {
+  display: inline-block;
+  float: right;
+  border-right: 1px solid white;
+}
+
+.header-item:hover {
+  background-color: black;
+  cursor: pointer;
+}
+
+.header-item {
+  float: left;
+  display: inline-block;
+  border-left: 1px solid white;
+  padding: 10px 20px 10px 20px;
+  position: relative;
+
+}
