--- a/skeleton/css/03-layout.css
+++ b/skeleton/css/03-layout.css
@@ -1,1 +1,48 @@
 /* PHASE 3: Layout */
+
+.content {
+  width: 900px;
+  margin: 0px auto;
+  position: relative;
+  border: 1px solid gray;
+  min-height: 200px;
+}
+
+.content:before {
+  position: absolute;
+  width: 2px;
+  height: 100%;
+  left: 225px;
+  background-color: gray;
+  display: block;
+  color:black;
+  content: "";
+}
+
+.content-main {
+  width: 670px;
+  min-height: inherit;
+  float: right;
+}
+
+.content-sidebar {
+  width: 225px;
+  min-height: inherit;
+  float: left;
+}
+
+
+/*.container{
+  width: 100%;
+  height: 100%;
+  border: 2px solid red;
+}
+
+.inner{
+  width: 33%;
+  height: 100%;
+  border: 3px solid blue;
+  background-color: gray;
+  padding: 25px;
+  display: inline-block;
+}*/
